# learn_cmake

./: cmake笔记.md  learn_cmake.md
learn_cmakelist/cmake00/: CMakeLists.txt
learn_cmakelist/cmake00/src/: CMakeLists.txt  hello_world.cpp
learn_cmakelist/cmake01/: CMakeLists.txt
learn_cmakelist/cmake01/src/: CMakeLists.txt  hello_world.cpp  hello_world.h
learn_cmakelist/cmake02/: CMakeLists.txt
learn_cmakelist/cmake02/lib/: CMakeLists.txt  hello.cpp  hello.h
learn_cmakelist/cmake03/: CMakeLists.txt
learn_cmakelist/cmake03/src/: CMakeLists.txt  main.cpp
learn_cmakelist/mycmake01/: CMakeLists.txt
learn_cmakelist/mycmake01/src/: CMakeLists.txt  main.cpp
learn_compile/: a.out  hello_world.cpp  print.cpp
learn_compile/include/: print.h
log/: latest_list
